Client draft code

--- a/src/Controls/KarveControls/CreditCardControl/CreditCardUserControl.xaml
+++ b/src/Controls/KarveControls/CreditCardControl/CreditCardUserControl.xaml
@@ -31,18 +31,18 @@
                                       ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay}"
                                       DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=LostFocus}">
             </local:DualFieldSearchBox>
-            <TextBox  Margin="10,5,10,5" Height="25" Text="{Binding Path=DataObject.Value.TARTI, Mode=TwoWay}"></TextBox>
+            <TextBox  Margin="10,5,10,5" Height="25" Text="{Binding Path=DataObject.TARTI, Mode=TwoWay}"></TextBox>
         </StackPanel>
 
         <StackPanel Grid.Row="2" Orientation="Vertical">
             <TextBlock Text="Titolare" FontSize="10"></TextBlock>
             
-            <TextBox  Margin="10,5,10,5" Height="25" Text="{Binding Path=DataObject.Value.TARTI, Mode=TwoWay}"></TextBox>
+            <TextBox  Margin="10,5,10,5" Height="25" Text="{Binding Path=DataObject.TARTI, Mode=TwoWay}"></TextBox>
         </StackPanel>
         <StackPanel Grid.Row="3">
             <TextBlock  Text="Numero en la carta" FontSize="10"></TextBlock>
             <StackPanel Orientation="Horizontal">
-                <TextBox Height="25" Margin="10,5,10,5" Text="{Binding Path=DataObject.Value.TARTINUM, Mode=TwoWay}" Width="242.963"></TextBox>
+                <TextBox Height="25" Margin="10,5,10,5" Text="{Binding Path=DataObject.TARTINUM, Mode=TwoWay}" Width="242.963"></TextBox>
                 <Image Source="/KarveControls;component/Images/visa.png" Width="25"></Image>
             </StackPanel>
         </StackPanel>
@@ -64,8 +64,8 @@
                     <TextBox Height="25" Margin="10,5,10,5" Width="50"  Text="{Binding Path=ExpiryYear, Mode=TwoWay}"></TextBox>
                 </StackPanel>
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
-                <TextBox Text="{Binding Path=DataObject.Value.TARCODI, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Height="25" Width="60"></TextBox>
-                    <TextBox Text="{Binding Path=DataObject.Value.TARCODI2, UpdateSourceTrigger=LostFocus}" Height="25" Width="60"></TextBox>
+                <TextBox Text="{Binding Path=DataObject.TARCODI, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Height="25" Width="60"></TextBox>
+                    <TextBox Text="{Binding Path=DataObject.TARCODI2, UpdateSourceTrigger=LostFocus}" Height="25" Width="60"></TextBox>
                 </StackPanel>
             </Grid>
         </StackPanel>
