--- a/src/Modules/MasterModule/Views/Clients/ActivitySector.xaml
+++ b/src/Modules/MasterModule/Views/Clients/ActivitySector.xaml
@@ -18,14 +18,14 @@
                                           Margin="0,5,0,0"
                                           AssistDataFieldFirst="NUM_ACTIVI"
                                           AssistDataFieldSecond="NOMBRE"
-                                          AssistTableName="ACTIVI"
+                                          AssistTableName="ACTIVITY_ASSIST"
                                           IsReadOnlySecond="True"
                                           DataFieldFirst="SECTOR"
                                           AssistProperties="Code,Nombre"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
                                           MagnifierCommand="{Binding MagnifierCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding ActivityDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.ActivityDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -43,7 +43,7 @@
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
                                           MagnifierCommand="{Binding MagnifierCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding ClientTypeDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.ClientTypeDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -55,15 +55,14 @@
                                           Margin="0,5,0,0"
                                           AssistDataFieldFirst="NUM_ZONA"
                                           AssistDataFieldSecond="NOMBRE"
-                                          AssistTableName="{Binding AssuranceKind, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          AssistTableName="CLIENT_ZONE"
                                           IsReadOnlySecond="True"
-                                          AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           DataFieldFirst="ZONA"
                                           AssistProperties="Code,Name"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
                                           MagnifierCommand="{Binding MagnifierCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding ZonaDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.ClientZoneDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -82,7 +81,7 @@
                                                       ItemChangedCommand="{Binding ItemChangedCommand}"
                                                       MagnifierCommand="{Binding MagnifierCommand}" 
                                                       DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                      SourceView="{Binding OrigenDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                                      SourceView="{Binding Path=ClientHelper.OrigenDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       LabelTextWidth="100"
                                                       TextContentFirstWidth="60" 
                                                       TextContentSecondWidth="150"
@@ -100,7 +99,7 @@
                                                       ItemChangedCommand="{Binding ItemChangedCommand}"
                                                       MagnifierCommand="{Binding MagnifierCommand}" 
                                                       DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                      SourceView="{Binding ResellerDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                                      SourceView="{Binding Path=ClientHelper.ResellerDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       LabelTextWidth="100"
                                                       TextContentFirstWidth="60" 
                                                       TextContentSecondWidth="150"
@@ -121,7 +120,7 @@
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
                                           MagnifierCommand="{Binding MagnifierCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding ClientMarketDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding ClientHelper.ClientMarketDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -140,7 +139,7 @@
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
                                           MagnifierCommand="{Binding MagnifierCommand}" 
                                           DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding AssuranceCompanyList, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.BusinessDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -156,7 +155,7 @@
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
                                           MagnifierCommand="{Binding MagnifierCommand}" 
                                           DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding AssuranceCompanyList, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.CanalDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -173,7 +172,7 @@
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
                                           MagnifierCommand="{Binding MagnifierCommand}" 
                                           DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding AssuranceCompanyList, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.BudgetKeyDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -192,7 +191,7 @@
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
                                           MagnifierCommand="{Binding MagnifierCommand}" 
                                           DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding RentUsageDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.RentUsageDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
@@ -209,7 +208,7 @@
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
                                           MagnifierCommand="{Binding MagnifierCommand}" 
                                           DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding AssuranceCompanyList, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding Path=ClientHelper.LanguageDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="100"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
