--- a/src/Modules/MasterModule/Views/Clients/BillingDates.xaml
+++ b/src/Modules/MasterModule/Views/Clients/BillingDates.xaml
@@ -15,23 +15,20 @@
                                               LabelText="Bloque Facturacion" 
                                               Height="30" 
                                           Margin="0,5,0,0"
-                                          AssistDataFieldFirst="NUM_PROVEE"
-                                          AssistDataFieldSecond="NOMBRE"
-                                          AssistTableName="{Binding AssuranceKind, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          AssistTableName="CLIENT_INVOICE_BLOCKS"
                                           IsReadOnlySecond="True"
-                                          AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                          DataFieldFirst="{Binding AssuranceCompanyPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          AssistProperties="Code,Nombre"
+                                          DataFieldFirst="Codigo"
+                                          AssistProperties="Code,Name"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
-                                          DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding AssuranceCompanyList, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          MagnifierCommand="{Binding AssistCommand}" 
+                                          DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding ClientHelper.InvoiceBlock, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="115"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
                                           ButtonImage="/KarveCar;component/Images/search.png"/>
 
-            <KarveControls:DataField DataSourcePath="NOMBRE" 
+            <KarveControls:DataField DataSourcePath="NUMSCOPIAFACT" 
                                                       DataObject="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                                       LabelText="Numero Copia Factura"
                                                       LabelTextWidth="130"
@@ -45,13 +42,13 @@
                 <KarveControls:DataFieldCheckBox Content="Una per contracto" 
                                                  KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay}"
                                                  KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommond, Mode=OneWay}"
-                                                 KarveControls:ControlExt.DataSourcePath="PATH"
+                                                 KarveControls:ControlExt.DataSourcePath="PERIODICI"
                                                  HorizontalAlignment="Left"
                                                  VerticalAlignment="Top"/>
                 <KarveControls:DataFieldCheckBox Content="Por periodo"
                                              KarveControls:ControlExt.DataSource="{Binding DataObject, Mode=TwoWay}"
                                                  KarveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommond, Mode=OneWay}"
-                                                 KarveControls:ControlExt.DataSourcePath="PATH"
+                                                 KarveControls:ControlExt.DataSourcePath="PERIODICI"
                                                  HorizontalAlignment="Left"
                                                  VerticalAlignment="Top"
                                              />
@@ -60,17 +57,15 @@
                                               LabelText="Abonar a" 
                                               Height="30" 
                                           Margin="0,5,0,0"
-                                          AssistDataFieldFirst="NUM_PROVEE"
-                                          AssistDataFieldSecond="NOMBRE"
-                                          AssistTableName="{Binding AssuranceKind, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          AssistTableName="CLIENT_BROKER"
                                           IsReadOnlySecond="True"
                                           AssistQuery="{Binding AssistQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                          DataFieldFirst="{Binding AssuranceCompanyPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          AssistProperties="Code,Nombre"
+                                          DataFieldFirst="NUM_COMI"
+                                          AssistProperties="Codigo,Nombre"
                                           ItemChangedCommand="{Binding ItemChangedCommand}"
-                                          MagnifierCommand="{Binding MagnifierCommand}" 
-                                          DataSource="{Binding DataObjectValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                          SourceView="{Binding AssuranceCompanyList, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                          MagnifierCommand="{Binding AssitCommand}" 
+                                          DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                          SourceView="{Binding BrokerSummaryDto, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                           LabelTextWidth="50"
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
